# HackCU2020

./: .gitignore  Dockerfile  README.md  app.db  app.py  config.py  graph  microblog.py  requirements.txt  run.sh  setup.py  test.py  testData.db  update_cache.sh  viz.dot
.cache_money/: README.md  addresses.json  graph.json  truck_paths.json
app/: forms.py  microblog.py  models.py  routes.py
app/static/css/: donation.css  font_awesome.css  styles.css
app/static/js/: donation.js
app/templates/: base.html  donation.html  index.html  login.html  register.html  trucker.html  user.html
migrations/versions/: 49117740c8c0_posts_table.py  839f50780c65_users_table.py  9640c5307dfe_users_table.py
src/: Database_Standup.sh  __init__.py  docker-compose.yaml  test.py  test2.py
src/.cache_money/: addresses.json  graph.json  graph_pretty.json  truck_paths.json
src/Database/: Database_Standup.sh  Menus.txt  Queries.sql  __init__.py  db_interface.py  fake_data.py  fake_data.txt  fake_donations.py  generateFib.sh
src/foodbank/: __init__.py  data_update.py  foodbank.py  main.py  settings.py
src/graph/: CMakeLists.txt  graph  graph.cpp  graph.hpp  graphviz.dot  viz.dot
static/css/: index.css
static/js/: client_side_db.js  index.js
templates/: ajax_example.php  clientSide.html  index.html  trucker.html
templates/extensions/: base.html
